src/test/run-pass/unique-fn-arg.rs
fn f(i: ~int) {
    assert *i == 100;
}

fn main() {
    f(~100);
    let i = ~100;
    f(i);
}