src/test/compile-fail/arg-count-mismatch.rs
// error-pattern: parameters were supplied

fn f(x: int) { }

fn main() { let i: (); i = f(); }
